Chuc nang Dashboard Admin

--- a/AloTraWebsite/src/main/resources/templates/fragments/header.html
+++ b/AloTraWebsite/src/main/resources/templates/fragments/header.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <th:block th:fragment="header">
-    <!-- Hàng trên của Header: Logo, Search, User Actions -->
+
+    <!-- Hàng trên của Header -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-top">
         <div class="container">
-            <a class="navbar-brand" th:href="@{/alotra-website/}">
-                <!-- Đảm bảo bạn có file logo.png trong static/images/ -->
-                <img th:src="@{/images/logo.jpg}" alt="AloTra Logo" style="height: 60px;"/>
+            <!-- Logo -->
+            <a class="navbar-brand" th:href="@{/}">
+                <img th:src="@{/images/logo.jpg}" alt="AloTra Logo" style="height: 60px;">
             </a>
 
             <!-- Thanh tìm kiếm -->
             <form class="d-flex mx-auto search-bar" role="search">
-                <input class="form-control me-2" type="search" placeholder="Bạn muốn mua gì..." aria-label="Search"/>
-                <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
+                <input class="form-control me-2" type="search" placeholder="Bạn muốn mua gì..."
+                       aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
             </form>
 
-            <!-- User Actions (Chon Phuong Thuc Nhan Hang, Mail, Account) -->
+            <!-- User Actions -->
             <ul class="navbar-nav user-actions ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-motorcycle"></i> Chọn Phương Thức Nhận Hàng</a>
@@ -23,12 +28,28 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-envelope"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/alotra-website/login}" id="authLink"><i class="fas fa-user"></i></a>
+
+                <!-- Chưa đăng nhập -->
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link" th:href="@{/login}">
+                        <i class="fas fa-user"></i> Đăng nhập
+                    </a>
                 </li>
-                <!-- Nút đăng xuất (ban đầu ẩn) -->
-                <li class="nav-item d-none" id="logoutNavItem">
-                    <a class="nav-link" href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i></a>
+
+                <!-- Đã đăng nhập -->
+                <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown"
+                       role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Xin chào, <span sec:authentication="name"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                        <li><a class="dropdown-item" th:href="@{/profile}">Thông tin cá nhân</a></li>
+                        <li>
+                            <form th:action="@{/logout}" method="post">
+                                <button type="submit" class="dropdown-item">Đăng xuất</button>
+                            </form>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -42,18 +63,19 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavBottom">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" th:href="@{/alotra-website/}">TRANG CHỦ</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/alotra-website/products}">MENU</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/alotra-website/products}">SẢN PHẨM ĐÓNG GÓI</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/alotra-website/about}">VỀ CHÚNG TÔI</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/alotra-website/policy}">KHUYẾN MÃI</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/alotra-website/profile}">HỘI VIÊN</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/}">TRANG CHỦ</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/products}">MENU</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/products}">SẢN PHẨM ĐÓNG GÓI</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/about}">VỀ CHÚNG TÔI</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/policy}">KHUYẾN MÃI</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/profile}">HỘI VIÊN</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
 </th:block>
 </html>
-
