--- a/AloTraWebsite/src/main/resources/templates/fragments/header.html
+++ b/AloTraWebsite/src/main/resources/templates/fragments/header.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="header">
 
-    <!-- Hàng trên của Header -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-top">
         <div class="container">
-            <!-- Logo -->
             <a class="navbar-brand" th:href="@{/}">
                 <img th:src="@{/images/logo.jpg}" alt="AloTra Logo" style="height: 60px;">
             </a>
 
-            <!-- Thanh tìm kiếm -->
             <form class="d-flex mx-auto search-bar" role="search">
-                <input class="form-control me-2" type="search" placeholder="Bạn muốn mua gì..."
-                       aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">
-                    <i class="fas fa-search"></i>
-                </button>
+                <input class="form-control me-2" type="search" placeholder="Bạn muốn mua gì..." aria-label="Search">
+                <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
             </form>
 
-            <!-- User Actions -->
             <ul class="navbar-nav user-actions ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-motorcycle"></i> Chọn Phương Thức Nhận Hàng</a>
@@ -29,33 +21,28 @@
                     <a class="nav-link" href="#"><i class="fas fa-envelope"></i></a>
                 </li>
 
-                <!-- Chưa đăng nhập -->
-                <li class="nav-item" sec:authorize="isAnonymous()">
+                <!-- Khi CHƯA đăng nhập -->
+                <li class="nav-item" id="nav-login">
                     <a class="nav-link" th:href="@{/login}">
                         <i class="fas fa-user"></i> Đăng nhập
                     </a>
                 </li>
 
-                <!-- Đã đăng nhập -->
-                <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
-                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown"
-                       role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Xin chào, <span sec:authentication="name"></span>
+                <!-- Khi ĐÃ đăng nhập -->
+                <li class="nav-item dropdown d-none" id="nav-user">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Xin chào, <span id="userName"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                         <li><a class="dropdown-item" th:href="@{/profile}">Thông tin cá nhân</a></li>
-                        <li>
-                            <form th:action="@{/logout}" method="post">
-                                <button type="submit" class="dropdown-item">Đăng xuất</button>
-                            </form>
-                        </li>
+                        <li><a class="dropdown-item" id="logoutBtn" href="#">Đăng xuất</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Hàng dưới của Header: Menu chính -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-bottom">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -67,8 +54,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavBottom">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" th:href="@{/}">TRANG CHỦ</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/products}">MENU</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/products}">SẢN PHẨM ĐÓNG GÓI</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/menu}">MENU</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/about}">VỀ CHÚNG TÔI</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/policy}">KHUYẾN MÃI</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/profile}">HỘI VIÊN</a></li>
@@ -76,6 +62,42 @@
             </div>
         </div>
     </nav>
+
+    <script type="module">
+        import { getJwtToken, apiFetch } from '/alotra-website/js/auth-helper.js';
+
+        const token = getJwtToken();
+        const loginItem = document.getElementById("nav-login");
+        const userItem = document.getElementById("nav-user");
+        const userName = document.getElementById("userName");
+
+        if (token) {
+            // Gọi API lấy thông tin người dùng
+            (async () => {
+                const res = await apiFetch("/api/users/me");
+                if (res && res.ok) {
+                    const user = await res.json();
+                    loginItem.classList.add("d-none");
+                    userItem.classList.remove("d-none");
+                    userName.textContent = user.fullName || "User";
+                } else {
+                    // Token hết hạn hoặc sai
+                    localStorage.removeItem("jwtToken");
+                    loginItem.classList.remove("d-none");
+                    userItem.classList.add("d-none");
+                }
+            })();
+        } else {
+            loginItem.classList.remove("d-none");
+            userItem.classList.add("d-none");
+        }
+
+        // Đăng xuất
+        document.getElementById("logoutBtn").addEventListener("click", () => {
+            localStorage.removeItem("jwtToken");
+            window.location.href = "/alotra-website/login";
+        });
+    </script>
 
 </th:block>
 </html>
