code order cua Vendor

--- a/AloTraWebsite/src/main/resources/templates/auth/login.html
+++ b/AloTraWebsite/src/main/resources/templates/auth/login.html
@@ -127,7 +127,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 setTimeout(() => {
                     if (role === "ADMIN") window.location.href = contextPath + "/admin/dashboard";
                     else if (role === "VENDOR") window.location.href = contextPath + "/vendor/dashboard";
-                    else if (role === "SHIPPER") window.location.href = contextPath + "/shipper/home";
+                    else if (role === "SHIPPER") window.location.href = contextPath + "/shipper/dashboard";
                     else window.location.href = contextPath + "/";
                 }, 1000);
             } else {
